# netcdf-cxx4

./: CMakeLists.txt
cxx4/: CMakeLists.txt
cxx4/include/: netcdf
cxx4/include/netcdf-cxx/: ncException.h
cxx4/src/: ncFile.cpp
cxx4/test/: CMakeLists.txt  test_classic.cpp  test_dim.cpp  test_filter.cpp
examples/: CMakeLists.txt
